Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-6312

HA_MUST_USE_TABLE_CONDITION_PUSHDOWN is not accounted by init_read_record()

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5.37, 10.0.11
    • 10.0.13
    • None

    Description

      init_read_record() performs condition pushdown, but doesn't honor HA_MUST_USE_TABLE_CONDITION_PUSHDOWN flag.

      Reported by Kentoku Shiba. More details to be added.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            svoj Sergey Vojtovich
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.